--- a/sb-jwt-demo/src/main/resources/application.properties
+++ b/sb-jwt-demo/src/main/resources/application.properties
@@ -5,6 +5,6 @@ keycloak.resource = b086819f
 keycloak.credentials.secret = 8e26abcc28d4d5aa63d4312c41148f251
 keycloak.use-resource-role-mappings = true
 
-keycloak.securityConstraints[0].authRoles[0] = admin
+keycloak.securityConstraints[0].authRoles[0] = hello
 keycloak.securityConstraints[0].securityCollections[0].name = insecure stuff
 keycloak.securityConstraints[0].securityCollections[0].patterns[0] = /hello
